feat(admin): 增加用户场馆管理员绑定与角色维护
- 新增用户绑定场馆管理员请求对象与管理端接口。
- 扩展用户响应信息，支撑后台展示用户角色和场馆关联状态。
- 调整用户服务实现，统一处理场馆管理员绑定、角色维护和查询回填逻辑。
- 配套调整网关 Token 校验逻辑，保障后台管理接口访问链路一致。